Add find client by id repository
